force-app/main/default/objects/AH_PLCM_Migration_Property__c/AH_PLCM_Migration_Property__c.object-meta.xml
<CustomObject>
    <description>Migration Property related information from Legacy products</description>
    <label>PLCM Migration Property</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PLCM Migration Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PLCM Migration Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>