force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comments regarding migrating property.</inlineHelpText>
    <label>Comments</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>