force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/Data_Import_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Import_Date__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date legacy data was imported.</inlineHelpText>
    <label>Data Import Date</label>
    <type>Date</type>
</CustomField>