force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/Is_Limited_Service__c.field-meta.xml
<CustomField>
    <fullName>Is_Limited_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Limited Service</label>
    <type>Checkbox</type>
</CustomField>