force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>NICC-036103</description>
    <inlineHelpText>Is Property active in Legacy product?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>