force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/IsFlagged_for_Migration__c.field-meta.xml
<CustomField>
    <fullName>IsFlagged_for_Migration__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>NICC-036103</description>
    <inlineHelpText>Once coordinator added the property in migration, needs to update field value to true.
Based on this flag, coordinator should not add same property to another migration</inlineHelpText>
    <label>Flagged for Migration</label>
    <type>Checkbox</type>
</CustomField>