force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/Major_Version__c.field-meta.xml
<CustomField>
    <fullName>Major_Version__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Major Version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>