force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/NI_Doc_Record__c.field-meta.xml
<CustomField>
    <fullName>NI_Doc_Record__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NICC-036103</description>
    <inlineHelpText>NI Documentation record to which this PLCM Migration Property record is associated.</inlineHelpText>
    <label>NI Doc Record</label>
    <referenceTo>NI_Documentation__c</referenceTo>
    <relationshipLabel>PLCM Migration Properties</relationshipLabel>
    <relationshipName>PLCM_Migration_Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>