force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Org ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>