force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Org Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>