force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Physical address of migrating property.</inlineHelpText>
    <label>Property Address</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>