force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/Property_City__c.field-meta.xml
<CustomField>
    <fullName>Property_City__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>City of migrating property.</inlineHelpText>
    <label>Property City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>