force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/Property_Currency__c.field-meta.xml
<CustomField>
    <fullName>Property_Currency__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <inlineHelpText>Currency of the migrating property.</inlineHelpText>
    <label>Property Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UAE Dirham	AED</fullName>
            </value>
            <value>
                <fullName>Afghanistan Afghani (New)	AFN</fullName>
            </value>
            <value>
                <fullName>Albanian Lek	ALL</fullName>
            </value>
            <value>
                <fullName>Armenian Dram	AMD</fullName>
            </value>
            <value>
                <fullName>Neth Antilles Guilder	ANG</fullName>
            </value>
            <value>
                <fullName>Angola Kwanza	AOA</fullName>
            </value>
            <value>
                <fullName>Argentine Peso	ARS</fullName>
            </value>
            <value>
                <fullName>Australian Dollar	AUD</fullName>
            </value>
            <value>
                <fullName>Aruba Florin	AWG</fullName>
            </value>
            <value>
                <fullName>Azerbaijanian New Manat	AZN</fullName>
            </value>
            <value>
                <fullName>Convertible Marks	BAM</fullName>
            </value>
            <value>
                <fullName>Barbados Dollar	BBD</fullName>
            </value>
            <value>
                <fullName>Bangladesh Taka	BDT</fullName>
            </value>
            <value>
                <fullName>Bulgaria Lev	BGN</fullName>
            </value>
            <value>
                <fullName>Bahraini Dinar	BHD</fullName>
            </value>
            <value>
                <fullName>Burundi Franc	BIF</fullName>
            </value>
            <value>
                <fullName>Bermuda Dollar	BMD</fullName>
            </value>
            <value>
                <fullName>Brunei Dollar	BND</fullName>
            </value>
            <value>
                <fullName>Bolivian Boliviano	BOB</fullName>
            </value>
            <value>
                <fullName>Bolivia Mvdol	BOV</fullName>
            </value>
            <value>
                <fullName>Brazilian Cruzeiro (old)	BRB</fullName>
            </value>
            <value>
                <fullName>Brazilian Real	BRL</fullName>
            </value>
            <value>
                <fullName>Bahamian Dollar	BSD</fullName>
            </value>
            <value>
                <fullName>Bhutan Ngultrum	BTN</fullName>
            </value>
            <value>
                <fullName>Botswana Pula	BWP</fullName>
            </value>
            <value>
                <fullName>Belarussian Ruble	BYN</fullName>
            </value>
            <value>
                <fullName>Belize Dollar	BZD</fullName>
            </value>
            <value>
                <fullName>Canadian Dollar	CAD</fullName>
            </value>
            <value>
                <fullName>Franc Congolais	CDF</fullName>
            </value>
            <value>
                <fullName>Swiss Franc	CHF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>