force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>State of migrating property.</inlineHelpText>
    <label>Property State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>