force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/Property_Time_Zone_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Time_Zone_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Time Zone Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>