force-app/main/default/objects/AH_PLCM_Migration_Property__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Postal zip code of migrating property.</inlineHelpText>
    <label>Property Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>